--- a/tools/pipelines/test-dds-stress.yml
+++ b/tools/pipelines/test-dds-stress.yml
@@ -39,7 +39,7 @@ stages:
         - experimental/dds/tree
         testFileTarName: experimental-tree
         testCommand: test:stress
-      - name: "@fluid-experimental/tree2"
+      - name: "@fluidframework/tree"
         affectedPaths:
         - experimental/dds/tree2
         testFileTarName: experimental-tree2
