--- a/experimental/dds/tree2/package.json
+++ b/experimental/dds/tree2/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@fluid-experimental/tree2",
+	"name": "@fluidframework/tree",
 	"version": "2.0.0-internal.9.0.0",
 	"description": "Tree",
 	"homepage": "https://fluidframework.com",
