build(tree): Rename `@fluid-experimental/tree2` to `@fluidframework/tree` in preparation for upcoming 2.0 beta (#18851)
Renames the package and updates references to it.

Moving the package out of `experimental` into `packages` will be done
separately in the future.

--- a/experimental/dds/tree2/package.json
+++ b/experimental/dds/tree2/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@fluid-experimental/tree2",
+	"name": "@fluidframework/tree",
 	"version": "2.0.0-rc.1.0.0",
 	"description": "Tree",
 	"homepage": "https://fluidframework.com",
