build(devtools): Update package scopes to `@fluidframework` in preparation for upcoming 2.0 beta (#18820)
Renames the packages from the `@fluid-experimental` namespace to the
`@fluidframework` namespace in preparation for the upcoming 2.0 release
candidate.

Note that while only the `devtools` package will be advertised publicly,
it depends on `devtools-core`, so both really need to move.

Additionally, while we don't publish `devtools-view`, we do use it in
"production" as a part of our browser extension, so it also really
doesn't belong in `@fluid-experimental` anymore. This PR moves it to
`@fluid-internal`.

--- a/azure/packages/external-controller/package.json
+++ b/azure/packages/external-controller/package.json
@@ -52,11 +52,11 @@
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@fluid-experimental/devtools": "workspace:~",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "0.29.0-222379",
 		"@fluidframework/container-definitions": "workspace:~",
 		"@fluidframework/container-loader": "workspace:~",
+		"@fluidframework/devtools": "workspace:~",
 		"@fluidframework/eslint-config-fluid": "^3.1.0",
 		"@fluidframework/fluid-static": "workspace:~",
 		"@fluidframework/local-driver": "workspace:~",
