--- a/packages/tools/devtools/devtools-example/package.json
+++ b/packages/tools/devtools/devtools-example/package.json
@@ -44,11 +44,9 @@
 		"@fluentui/react-components": "~9.19.1",
 		"@fluentui/react-icons": "^2.0.201",
 		"@fluid-example/example-utils": "workspace:~",
-		"@fluid-experimental/devtools": "workspace:~",
-		"@fluid-experimental/devtools-core": "workspace:~",
-		"@fluid-experimental/devtools-view": "workspace:~",
 		"@fluid-experimental/react-inputs": "workspace:~",
 		"@fluid-internal/client-utils": "workspace:~",
+		"@fluid-internal/devtools-view": "workspace:~",
 		"@fluidframework/aqueduct": "workspace:~",
 		"@fluidframework/cell": "workspace:~",
 		"@fluidframework/container-definitions": "workspace:~",
@@ -57,6 +55,8 @@
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/counter": "workspace:~",
 		"@fluidframework/datastore-definitions": "workspace:~",
+		"@fluidframework/devtools": "workspace:~",
+		"@fluidframework/devtools-core": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/fluid-static": "workspace:~",
 		"@fluidframework/map": "workspace:~",
