--- a/packages/dds/matrix/package.json
+++ b/packages/dds/matrix/package.json
@@ -67,8 +67,8 @@
 		"cache-dir": "nyc/.cache",
 		"exclude-after-remap": false,
 		"include": [
-			"src/**/*.ts",
-			"dist/**/*.js"
+			"src/**/*.*ts",
+			"dist/**/*.*js"
 		],
 		"report-dir": "nyc/report",
 		"reporter": [
