--- a/tools/pipelines/templates/include-test-task.yml
+++ b/tools/pipelines/templates/include-test-task.yml
@@ -5,14 +5,18 @@
 
 parameters:
 - name: taskTestStep
-  type: string 
+  type: string
 
 - name: buildDirectory
-  type: string 
+  type: string
 
-steps: 
+- name: testCoverage
+  type: boolean
+  default: false
+
+steps:
 # Test - With coverage
-- ${{ if and(eq(variables['testCoverage'], true), startsWith(parameters.taskTestStep, 'ci:test')) }}:
+- ${{ if and(parameters.testCoverage, startsWith(parameters.taskTestStep, 'ci:test')) }}:
   - task: Npm@1
     displayName: npm run ${{ parameters.taskTestStep }}:coverage
     inputs:
