--- a/tools/pipelines/templates/include-test-task.yml
+++ b/tools/pipelines/templates/include-test-task.yml
@@ -22,7 +22,7 @@ steps:
     inputs:
       command: 'custom'
       workingDir: ${{ parameters.buildDirectory }}
-      customCommand: 'run ${{ taskTestStep }}:coverage'
+      customCommand: 'run ${{ parameters.taskTestStep }}:coverage'
     condition: and(succeededOrFailed(), eq(variables['startTest'], 'true'))
     env:
       # Tests can use this environment variable to behave differently when running from a test branch
