--- a/tools/pipelines/test-dds-stress.yml
+++ b/tools/pipelines/test-dds-stress.yml
@@ -42,6 +42,6 @@ stages:
       - name: "@fluidframework/tree"
         affectedPaths:
         - experimental/dds/tree2
-        testFileTarName: experimental-tree2
+        testFileTarName: tree
         testCommand: test:stress
       testWorkspace: ${{ variables.testWorkspace }}
