build(docs): Test webapp redirect rule in staticwebapp.config.json (#18870)
We are testing redirects for FF.com in docs/staticwebapp.config.json

---------

Co-authored-by: Rohan Dubal <rohan.n.dubal@gmail.com>
Co-authored-by: Joshua Smithrud <54606601+Josmithr@users.noreply.github.com>

--- a/docs/staticwebapp.config.json
+++ b/docs/staticwebapp.config.json
@@ -1,5 +1,16 @@
 {
-	"routes": [],
+	"routes": [
+		{
+			"route": "/docs/fcdocstest",
+			"redirect": "/docs/api/v1",
+			"statusCode": 301
+		},
+		{
+			"route": "/docs/apis/*",
+			"redirect": "/docs/api/v1",
+			"statusCode": 301
+		}
+	],
 	"globalHeaders": {
 		"cache-control": "must-revalidate, max-age=3600"
 	}
