--- a/docs/staticwebapp.config.json
+++ b/docs/staticwebapp.config.json
@@ -2,12 +2,12 @@
 	"routes": [
 		{
 			"route": "/docs/fcdocstest",
-			"redirect": "/docs/api/v1",
+			"redirect": "/docs/apis",
 			"statusCode": 301
 		},
 		{
 			"route": "/docs/apis/*",
-			"redirect": "/docs/api/v1",
+			"redirect": "/docs/apis",
 			"statusCode": 301
 		}
 	],
