--- a/experimental/dds/tree/tsconfig.json
+++ b/experimental/dds/tree/tsconfig.json
@@ -1,13 +1,15 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.cjs.json"
+	],
+	"include": ["src/**/*"],
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
-		"composite": true,
+		"rootDir": "./src",
+		"outDir": "./dist",
 		"downlevelIteration": true,
 		"noUnusedLocals": false,
-		"outDir": "./dist",
-		"rootDir": "./src",
 		"types": ["mocha"]
-	},
-	"include": ["src/**/*"]
+	}
 }
