--- a/packages/dds/tree/tsconfig.json
+++ b/packages/dds/tree/tsconfig.json
@@ -1,11 +1,14 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.cjs.json",
+	],
+	"include": ["src/**/*"],
 	"exclude": ["src/test/**/*"],
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./dist",
 		"noImplicitAny": true,
-		"composite": true,
 		"preserveConstEnums": true,
 		// Allow unused locals.
 		// This is needed for type assertions using the TypeCheck library.
@@ -13,5 +16,4 @@
 		"noUnusedLocals": false,
 		"noImplicitOverride": true,
 	},
-	"include": ["src/**/*"],
 }
