--- a/packages/common/container-definitions/package.json
+++ b/packages/common/container-definitions/package.json
@@ -54,7 +54,7 @@
 		"@fluid-tools/build-cli": "^0.28.0",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "^0.28.0",
-		"@fluidframework/container-definitions-previous": "npm:@fluidframework/container-definitions@2.0.0-internal.8.0.0",
+		"@fluidframework/container-definitions-previous": "npm:@fluidframework/container-definitions@2.0.0-internal.7.2.0",
 		"@fluidframework/eslint-config-fluid": "^3.1.0",
 		"@microsoft/api-extractor": "^7.38.3",
 		"@types/events": "^3.0.0",
@@ -78,6 +78,32 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"RemovedInterfaceDeclaration_IPendingLocalState": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"InterfaceDeclaration_IRuntime": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_ISnapshotTreeWithBlobContents": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_IContainer": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_IContainerContext": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_IHostLoader": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_ILoader": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_IProvideLoader": {
+				"backCompat": false
+			}
+		}
 	}
 }
