--- a/docs/staticwebapp.config.json
+++ b/docs/staticwebapp.config.json
@@ -1,13 +1,13 @@
 {
 	"routes": [
 		{
-			"route": "/docs/fcdocstest",
+			"route": "/docs/fcdocstest/",
 			"redirect": "/docs/apis",
 			"statusCode": 301
 		},
 		{
-			"route": "/docs/apis/*",
-			"redirect": "/docs/apis",
+			"route": "/docs/apis/{*}",
+			"redirect": "/docs/apis/{*}",
 			"statusCode": 301
 		}
 	],
