fix type validation

--- a/server/routerlicious/packages/services-core/package.json
+++ b/server/routerlicious/packages/services-core/package.json
@@ -94,6 +94,9 @@
 			"InterfaceDeclaration_ICheckpointService": {
 				"forwardCompat": false,
 				"backCompat": false
+			},
+			"InterfaceDeclaration_IWebSocketTracker": {
+				"forwardCompat": false
 			}
 		}
 	}
