--- a/server/routerlicious/packages/routerlicious-base/package.json
+++ b/server/routerlicious/packages/routerlicious-base/package.json
@@ -132,6 +132,12 @@
 			"ClassDeclaration_RiddlerResources": {
 				"forwardCompat": false,
 				"backCompat": false
+			},
+			"ClassDeclaration_AlfredResources": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_IAlfredResourcesCustomizations": {
+				"forwardCompat": false
 			}
 		}
 	}
